		System: added Ghanaian Cedi, Myanmar Kyat as currencies
		System: converted remaining email scripts from mail to phpmailer
		System: checked Get Support option in installer by default
		Activities: fixed error in adding and editing activities when payment is turned off
		Activities: added onclick delete confirm for slots and staff in edit view
		Activities: fixed PHP Notice in moduleFunctions
		Attendance: added client side warning in case attendance is taken for a day in the past (happens when user not logged out over night)
		Attendance: added ability to see date range in Form Groups Not Registered
		Attendance: added reason as title/hover over type in Student History report function
		Attendance: added database index to improve performance of attendance by roll group page load
		Attendance: fixed PHP Notice in moduleFunctions
		Behaviour: made column widths consistent when viewing behaviour log
		Behaviour: increased min-width for Action column
		Behaviour: fixed <? bug
		Data Updater: made message regarding existing submission appear more consistently
		Data Updater: fixed server-side validation of condition and risk in new medical conditions
		Departments: fixed filter in Homework link from Class view page
		Departments: added confirm on delete of resources
		Finance: fixed <? bug
		Finance: added ability to provide multiple company email addresses
		Finance: fixed bug preventing printing of receipts when status is 'Paid - Partial'
		Finance: added ability (off by default) for students to view their own invoices
		Finance: fixed PHP notice issues
		Finance: added confirm on delete of budget members
		Form Groups: adjusted labels in Sort By select
		Formal Assessment: fixed issue with View Classes menu not appearing for a user with no classes (e.g. admin)
		Formal Assessment: fixed uploaded response file selector gigantism issue
		Formal Assessment: added interface for parents and students to view External Assessments (off by default)